--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>
 
-    <script type="text/javascript" src="../third_party/stats.min.js"></script>
-    <script type="text/javascript" src="../third_party/dat.gui.min.js"></script>
+    <script type="text/javascript" src="third_party/stats.min.js"></script>
+    <script type="text/javascript" src="third_party/dat.gui.min.js"></script>
 
-    <script type="text/javascript" src="../common/util_tfjs.js"></script>
-    <script type="text/javascript" src="../common/util_shader.js"></script>
-    <script type="text/javascript" src="../common/util_matrix.js"></script>
-    <script type="text/javascript" src="../common/util_texture.js"></script>
-    <script type="text/javascript" src="../common/util_render2d.js"></script>
-    <script type="text/javascript" src="../common/util_render_target.js"></script>
-    <script type="text/javascript" src="../common/util_debugstr.js"></script>
-    <script type="text/javascript" src="../common/util_pmeter.js"></script>
+    <script type="text/javascript" src="common/util_tfjs.js"></script>
+    <script type="text/javascript" src="common/util_shader.js"></script>
+    <script type="text/javascript" src="common/util_matrix.js"></script>
+    <script type="text/javascript" src="common/util_texture.js"></script>
+    <script type="text/javascript" src="common/util_render2d.js"></script>
+    <script type="text/javascript" src="common/util_render_target.js"></script>
+    <script type="text/javascript" src="common/util_debugstr.js"></script>
+    <script type="text/javascript" src="common/util_pmeter.js"></script>
 
     <script type="text/javascript" src="glue_mediapipe.js"></script>
     <script type="text/javascript" src="tfjs_face_inspector.js"></script>
