--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <center>
     <canvas id="glcanvas" width="800" height="800"></canvas>
     <br>
+    Ngx <br>
     This tfjs model is converted from the pretrained model of <a href="https://github.com/yu4u/age-gender-estimation">https://github.com/yu4u/age-gender-estimation</a>.
     <br>
-    Please note the <a href="https://data.vision.ee.ethz.ch/cvl/rrothe/imdb-wiki/">license of the dataset</a>.
+    Fork for learning purpose!</a>.
     </center>
     <div id="debug_log"></div>
 </body>
